Structure prepared; Home/Notes/About views prepared; Router configured

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,13 +1,8 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@import './styles/base/reset';
+@import './styles/base/typography';
+@import './styles/base/keyframes';
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+@import './styles/components/home-header';
+@import './styles/components/background-bubbles';
+
+@import './styles/views/home';
