FontAwesome package added; Home page content prepared; ColumnNavigation component created

--- a/src/index.scss
+++ b/src/index.scss
@@ -4,5 +4,6 @@
 
 @import './styles/components/home-header';
 @import './styles/components/background-bubbles';
+@import './styles/components/column-navigation';
 
 @import './styles/views/home';
