--- a/src/styles/base/_keyframes.scss
+++ b/src/styles/base/_keyframes.scss
@@ -28,6 +28,32 @@
   }
 }
 
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeInBottom {
+  0% {
+    transform: translateY(2rem) rotateZ(39.5deg);
+    opacity: 0;
+
+    @media (min-width: '768px') {
+      transform: translateY(5rem) rotateZ(39.5deg);
+    }
+  }
+
+  100% {
+    transform: translateY(0rem) rotateZ(39.5deg);
+    opacity: 1;
+  }
+}
+
 @keyframes fadeInLeft {
   0% {
     transform: translateX(-2rem);
