Navigation component (main navigation) prepared

--- a/src/index.scss
+++ b/src/index.scss
@@ -2,8 +2,10 @@
 @import './styles/base/typography';
 @import './styles/base/keyframes';
 
+@import './styles/components/buttons';
 @import './styles/components/home-header';
 @import './styles/components/background-bubbles';
+@import './styles/components/navigation';
 @import './styles/components/column-navigation';
 
 @import './styles/views/home';
