Navigation adjustment; About page AJAX callback prepared

--- a/src/index.scss
+++ b/src/index.scss
@@ -8,4 +8,5 @@
 @import './styles/components/navigation';
 @import './styles/components/column-navigation';
 
+@import './styles/views/base';
 @import './styles/views/home';
