--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -23,9 +23,21 @@ h6 {
   color: $colorText;
   font-weight: 300;
   line-height: 1;
+  margin-top: 0.67em;
+  margin-bottom: 0.67em;
 
   @media (min-width: '768px') {
     line-height: 1.5;
+  }
+}
+
+p {
+  font-size: 1.6rem;
+  line-height: 1.25;
+  margin-bottom: 1em;
+
+  @media (min-width: '768px') {
+    line-height: 1.75;
   }
 }
 
