--- a/src/styles/components/_navigation.scss
+++ b/src/styles/components/_navigation.scss
@@ -1,10 +1,16 @@
 .navigation {
   position: relative;
   display: flex;
-  justify-content: flex-end;
+  flex-wrap: wrap;
+  justify-content: flex-start;
   max-width: 120rem;
-  padding: 4rem 0;
+  padding: 7rem 1rem 1rem;
   margin: 0 auto 3rem;
+
+  @media (min-width: '600px') {
+    justify-content: flex-end;
+    padding: 4rem 0;
+  }
 
   &::before {
     position: absolute;
@@ -19,10 +25,16 @@
   &__title {
     position: absolute;
     top: 0;
-    left: 0;
+    left: 1rem;
     letter-spacing: 0.5rem;
     color: $colorPrimary;
     opacity: 0.5;
+    margin: 0;
+
+    @media (min-width: '1200px') {
+      left: 0;
+    }
+  
   }
 
   &__button {
@@ -31,10 +43,14 @@
     display: flex;
     align-items: center;
     padding: 0.5rem 0.75rem 0.4rem 0.7rem;
-    margin: 0 1rem 0 0;
+    margin: 0 1rem 1rem 0;
 
-    &:last-of-type {
-      margin: 0;
+    @media (min-width: '600px') {
+      margin: 0 1rem 0 0;
+
+      &:last-of-type {
+        margin: 0;
+      }
     }
 
     &::before {
