--- a/src/styles/components/_navigation.scss
+++ b/src/styles/components/_navigation.scss
@@ -1,15 +1,23 @@
 .navigation {
-  position: relative;
+  position: fixed;
+  top: 0;
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-start;
+  width: 100%;
   max-width: 120rem;
   padding: 7rem 1rem 1rem;
   margin: 0 auto 3rem;
+  background-color: $colorWhite;
+  z-index: 10;
 
   @media (min-width: '600px') {
     justify-content: flex-end;
     padding: 4rem 0;
+  }
+
+  @media (min-width: '1200px') {
+    left: calc(50% - 60rem);
   }
 
   &::before {
