--- a/src/styles/views/_base.scss
+++ b/src/styles/views/_base.scss
@@ -2,9 +2,14 @@
   position: relative;
   max-width: 110rem;
   padding: 0 1.5rem;
-  margin: 2rem auto;
+  margin: 19rem auto 2rem;
+
+  @media (min-width: '410px') {
+    margin: 14.75rem auto 2rem;
+  }
 
   @media (min-width: '768px') {
+    margin: 15rem auto 2rem;
     padding: 0 2rem;
   }
   
