Notes AJAX call prepared, Cards component created

--- a/src/styles/components/_navigation.scss
+++ b/src/styles/components/_navigation.scss
@@ -28,6 +28,7 @@
     left: 0;
     width: 100%;
     border-bottom: 0.1rem solid rgba($color: $colorSecondary, $alpha: 0.5);
+    box-shadow: 0 0.3rem 0.45rem rgba(0, 0, 0, 0.20);
   }
 
   &__title {
