--- a/src/styles/views/_base.scss
+++ b/src/styles/views/_base.scss
@@ -1,6 +1,7 @@
 .container {
   position: relative;
   max-width: 110rem;
+  min-height: 100rem;
   padding: 0 1.5rem;
   margin: 19rem auto 2rem;
 
