--- a/src/index.scss
+++ b/src/index.scss
@@ -10,6 +10,7 @@
 @import './styles/components/column-navigation';
 @import './styles/components/pills';
 @import './styles/components/timeline';
+@import './styles/components/cards';
 
 @import './styles/views/base';
 @import './styles/views/home';
