--- a/src/index.scss
+++ b/src/index.scss
@@ -2,6 +2,7 @@
 @import './styles/base/typography';
 @import './styles/base/keyframes';
 @import './styles/base/modifiers';
+@import './styles/base/wp';
 
 @import './styles/components/buttons';
 @import './styles/components/home-header';
@@ -11,6 +12,8 @@
 @import './styles/components/pills';
 @import './styles/components/timeline';
 @import './styles/components/cards';
+@import './styles/components/table-of-content';
 
 @import './styles/views/base';
 @import './styles/views/home';
+@import './styles/views/note';
