--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -19,7 +19,8 @@ h2,
 h3,
 h4,
 h5,
-h6 {
+h6,
+ul li {
   color: $colorText;
   font-weight: 300;
   line-height: 1.25;
@@ -31,13 +32,21 @@ h6 {
   }
 }
 
-p {
+p,
+ul li {
   font-size: 1.6rem;
-  line-height: 1.25;
-  margin-bottom: 1em;
+  line-height: 1.5;
+  letter-spacing: 0.05rem;
+  margin-bottom: 1rem;
 
   @media (min-width: '768px') {
-    line-height: 1.75;
+    margin-bottom: 1.5rem;
+  }
+}
+
+ul {
+  @media (min-width: '768px') {
+    margin: 1.5rem 0;
   }
 }
 
@@ -51,50 +60,54 @@ h1 {
 }
 
 h2 {
-  font-size: 4rem;
+  font-size: 3.8rem;
   font-weight: 100;
 
   @media (min-width: '768px') {
-    font-size: 6rem;
+    font-size: 4.6rem;
   }
 }
 
 h3 {
-  font-size: 3.6rem;
+  font-size: 3.1rem;
   font-weight: 100;
 
   @media (min-width: '768px') {
-    font-size: 4.8rem;
+    font-size: 3.8rem;
   }
 }
 
 h4 {
-  font-size: 2.8rem;
+  font-size: 2.3rem;
   font-weight: 100;
 
   @media (min-width: '768px') {
-    font-size: 3.6rem;
+    font-size: 3.1rem;
   }
 }
 
 h5 {
-  font-size: 2.2rem;
+  font-size: 2rem;
   font-weight: 100;
 
   @media (min-width: '768px') {
-    font-size: 2.8rem;
+    font-size: 2.3rem;
   }
 }
 
 h6 {
-  font-size: 1.8rem;
+  font-size: 1.6rem;
   font-weight: 100;
 
   @media (min-width: '768px') {
-    font-size: 2.4rem;
+    font-size: 2.2rem;
   }
 }
 
 a {
   color: $colorPrimary;
+}
+
+strong {
+  font-weight: 500;
 }
