--- a/src/styles/components/_cards.scss
+++ b/src/styles/components/_cards.scss
@@ -43,7 +43,7 @@
   &__image {
     img {
       width: 100%;
-      height: 200px;
+      height: 20rem;
       object-fit: cover;
     }
   }
@@ -63,16 +63,17 @@
   }
 
   &__title {
-    font-size: 2rem;
-    line-height: 1.15;
-    font-weight: 400;
+    font-size: 2.8rem;
+    line-height: 1;
+    font-weight: 300;
+    letter-spacing: -0.05rem;
   }
 
   &__excerpt {
     margin-top: auto;
 
     p {
-      font-size: 1.3rem;
+      font-size: 1.4rem;
       line-height: 1.25;
       margin-top: 0;
     }
