--- a/src/styles/components/_navigation.scss
+++ b/src/styles/components/_navigation.scss
@@ -1,24 +1,10 @@
 .navigation {
   position: fixed;
   top: 0;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-start;
+  left: 0;
   width: 100%;
-  max-width: 120rem;
-  padding: 7rem 1rem 1rem;
-  margin: 0 auto 3rem;
   background-color: $colorWhite;
   z-index: 10;
-
-  @media (min-width: '600px') {
-    justify-content: flex-end;
-    padding: 4rem 0;
-  }
-
-  @media (min-width: '1200px') {
-    left: calc(50% - 60rem);
-  }
 
   &::before {
     position: absolute;
@@ -28,7 +14,23 @@
     left: 0;
     width: 100%;
     border-bottom: 0.1rem solid rgba($color: $colorSecondary, $alpha: 0.5);
-    box-shadow: 0 0.3rem 0.45rem rgba(0, 0, 0, 0.20);
+    box-shadow: 0 0.2rem 0.25rem rgba(0, 0, 0, 0.35);
+  }
+
+  &__inner {
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    width: 100%;
+    max-width: 120rem;
+    padding: 7rem 1rem 1rem;
+    margin: auto;
+
+    @media (min-width: '600px') {
+      justify-content: flex-end;
+      padding: 3rem 0;
+    }
   }
 
   &__title {
@@ -37,13 +39,16 @@
     left: 1rem;
     letter-spacing: 0.5rem;
     color: $colorPrimary;
-    opacity: 0.5;
+    opacity: 0.75;
     margin: 0;
+
+    @media (min-width: '600px') {
+      top: -2rem;
+    }
 
     @media (min-width: '1200px') {
       left: 0;
     }
-  
   }
 
   &__button {
@@ -78,7 +83,7 @@
 
     svg {
       width: 1.3rem !important;
-      margin-left: 0.2rem;
+      margin-left: 0.15rem;
     }
 
     &.active {
@@ -87,10 +92,6 @@
       &::before {
         background: rgba($colorPrimary, 0.65);
         box-shadow: 0 0.1rem 0.15rem rgba($colorSecondary, 0.25);
-      }
-  
-      svg {
-        color: rgba($colorWhite, 1);
       }
     }
   }
