--- a/src/styles/components/_navigation.scss
+++ b/src/styles/components/_navigation.scss
@@ -29,6 +29,10 @@
 
     @media (min-width: '600px') {
       justify-content: flex-end;
+      padding: 6rem 0 1rem;
+    }
+
+    @media (min-width: '768px') {
       padding: 3rem 0;
     }
   }
@@ -43,11 +47,29 @@
     margin: 0;
 
     @media (min-width: '600px') {
+      top: -1rem;
+    }
+
+    @media (min-width: '768px') {
       top: -2rem;
     }
 
     @media (min-width: '1200px') {
       left: 0;
+    }
+
+    &.plugin {
+      font-size: 5rem;
+
+      @media (min-width: '600px') {
+        font-size: 4.75rem;
+        top: -0.75rem;
+      }
+
+      @media (min-width: '940px') {
+        top: -2rem;
+        font-size: 8.2rem;
+      }
     }
   }
 
