Loader component created; page change transitions prepared

--- a/src/index.scss
+++ b/src/index.scss
@@ -13,6 +13,7 @@
 @import './styles/components/timeline';
 @import './styles/components/cards';
 @import './styles/components/table-of-content';
+@import './styles/components/loader';
 
 @import './styles/views/base';
 @import './styles/views/home';
