--- a/src/styles/base/_keyframes.scss
+++ b/src/styles/base/_keyframes.scss
@@ -69,3 +69,53 @@
     opacity: 1;
   }
 }
+
+@keyframes titleTransition {
+  0% {
+    transform: scale(1.1);
+    opacity: 0;
+    filter: blur(0.25rem);
+  }
+
+  100% {
+    transform: scale(1);
+    opacity: 1;
+    filter: blur(0);
+  }
+}
+
+@keyframes contentFadeIn {
+  0% {
+    opacity: 0;
+    filter: blur(0.5rem);
+  }
+
+  100% {
+    opacity: 1;
+    filter: blur(0);
+  }
+}
+
+@keyframes contentFadeOut {
+  0% {
+    transform: scale(1);
+    opacity: 1;
+    filter: blur(0);
+  }
+
+  100% {
+    transform: scale(1.1);
+    opacity: 0;
+    filter: blur(0.25rem);
+  }
+}
+
+@keyframes rotateAnimation {
+  0% {
+    transform: rotateZ(0);
+  }
+
+  100% {
+    transform: rotateZ(360deg);
+  }
+}
