ScrollToTop component created; Note's ToC scroll adjusted

--- a/src/index.scss
+++ b/src/index.scss
@@ -14,6 +14,7 @@
 @import './styles/components/cards';
 @import './styles/components/table-of-content';
 @import './styles/components/loader';
+@import './styles/components/go-to-top';
 
 @import './styles/views/base';
 @import './styles/views/home';
