Footer component created; 404 Not Found view created

--- a/src/index.scss
+++ b/src/index.scss
@@ -15,7 +15,9 @@
 @import './styles/components/table-of-content';
 @import './styles/components/loader';
 @import './styles/components/go-to-top';
+@import './styles/components/footer';
 
 @import './styles/views/base';
 @import './styles/views/home';
 @import './styles/views/note';
+@import './styles/views/not-found';
