--- a/src/styles/views/_base.scss
+++ b/src/styles/views/_base.scss
@@ -18,7 +18,7 @@ html {
 .container {
   position: relative;
   max-width: 100rem;
-  min-height: 100rem;
+  min-height: 100vh;
   padding: 0 1.5rem;
   margin: 19rem auto 5rem;
 
