--- a/src/styles/base/_keyframes.scss
+++ b/src/styles/base/_keyframes.scss
@@ -101,12 +101,14 @@
     transform: scale(1);
     opacity: 1;
     filter: blur(0);
+    z-index: 1;
   }
 
   100% {
     transform: scale(1.1);
     opacity: 0;
     filter: blur(0.25rem);
+    z-index: -1;
   }
 }
 
@@ -117,5 +119,11 @@
 
   100% {
     transform: rotateZ(360deg);
+  }
+}
+
+@keyframes shimmer {
+  100% {
+    transform: translateX(100%);
   }
 }
