--- a/src/styles/components/_pills.scss
+++ b/src/styles/components/_pills.scss
@@ -1,4 +1,6 @@
 .pills {
+  $this: &;
+
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -13,6 +15,54 @@
     margin: 0.5rem;
     border-radius: 3.25rem;
     background: rgba($colorPrimary, 0.45);
-    box-shadow: 0 0.1rem 0.25rem rgba($colorSecondary, 0);
+    box-shadow: 0 0.1rem 0.25rem rgba($colorSecondary, 0.25);
+  }
+
+  &.category {
+    max-width: 100%;
+    margin-bottom: 2rem;
+    
+    #{$this}__single {
+      margin: 0.25rem;
+      background: rgba($colorSecondary, 0.2);
+      box-shadow: 0 0.1rem 0.25rem rgba($colorSecondary, 0);
+      cursor: pointer;
+      opacity: 0;
+      animation: contentFadeIn 0.5s ease 0.15s alternate forwards;
+      transition: background-color 0.3s ease, box-shadow 0.3s ease;
+      will-change: background-color, box-shadow;
+
+      &.active {
+        background: rgba($colorPrimary, 0.45);
+        box-shadow: 0 0.1rem 0.25rem rgba($colorSecondary, 0.25);
+      }
+
+      &.skeleton {
+        position: relative;
+        width: 100%;
+        height: 2.8rem;
+        background-color: $colorWhite;
+        overflow: hidden;
+        z-index: -1;
+
+        &::after {
+          position: absolute;
+          top: 0;
+          right: 0;
+          bottom: 0;
+          left: 0;
+          content: '';
+          transform: translateX(-100%);
+          background-image: linear-gradient(
+            90deg,
+            rgba($colorSecondary, 0) 0,
+            rgba($colorSecondary, 0.2) 20%,
+            rgba($colorSecondary, 0.5) 60%,
+            rgba($colorSecondary, 0)
+          );
+          animation: shimmer 1s infinite;
+        }
+      }
+    }
   }
 }
