Errors correction, Social buttons added
React render error corrections;
Social buttons [GitHub, LinkedIn] prepared

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,5 @@
 @import './styles/base/reset';
+@import './styles/base/mixins';
 @import './styles/base/typography';
 @import './styles/base/keyframes';
 @import './styles/base/modifiers';
