--- a/src/styles/components/_home-header.scss
+++ b/src/styles/components/_home-header.scss
@@ -12,6 +12,10 @@
     margin: 0;
     animation: fadeInLeft 1.5s ease 0.75s alternate forwards;
     opacity: 0;
+
+    @media (max-width: '365px') {
+      font-size: 5rem;
+    }
   }
 
   &__title {
@@ -19,15 +23,60 @@
     margin: 0;
     opacity: 0;
 
+    @media (max-width: '365px') {
+      font-size: 3.2rem;
+    }
+
     @media (min-width: '768px') {
       margin-top: -3rem;
+    }
+  }
+
+  &__social {
+    display: flex;
+    flex-wrap: wrap;
+
+    a {
+      display: flex;
+      align-items: center;
+      text-decoration: none;
+      color: $colorText;
+      font-size: 1.8rem;
+      margin-right: 2.5rem;
+      transition: color 0.2s ease;
+      will-change: color;
+      animation: fadeInLeft 1.5s ease 1.5s alternate forwards;
+      opacity: 0;
+
+      @media (min-width: '768px') {
+        font-size: 2rem;
+      }
+
+      &:hover {
+        color: $colorPrimary;
+
+        .icon {
+          color: $colorPrimary;
+        }
+      }
+    }
+
+    .icon {
+      font-size: 2rem;
+      margin-right: 0.5rem;
+      transition: color 0.2s ease;
+      will-change: color;
+
+      @media (min-width: '768px') {
+        font-size: 3rem;
+      }
     }
   }
 
   &__separator {
     position: relative;
     width: 0;
-    margin: 2rem 0 3rem;
+    margin: 3rem 0;
     border-bottom: 0.15rem solid $colorPrimary;
     animation: borderExpand 0.25s ease 2s alternate forwards;
 
