--- a/src/styles/components/_loader.scss
+++ b/src/styles/components/_loader.scss
@@ -13,8 +13,17 @@
     top: -2rem;
     left: 0;
     width: 100%;
+    height: 13rem;
     padding-top: 2rem;
     backdrop-filter: blur(0.5rem);
+
+    @media (min-width: '411px') {
+      height: 9rem;
+    }
+
+    @media (min-width: '707px') {
+      height: auto;
+    }
   }
 
   &.loaded {
