--- a/src/styles/base/_wp.scss
+++ b/src/styles/base/_wp.scss
@@ -20,6 +20,14 @@
         height: 0.2rem;
         border-bottom: 0.2rem solid $colorPrimary;
       }
+
+      &.--no-underline {
+        border-bottom: none;
+
+        &::after {
+          width: 25%;
+        }
+      }
     }
 
     ul {
@@ -90,6 +98,26 @@
       height: 100%;
       margin: auto;
     }
+  }
+
+  &-block-columns {
+    display: flex;
+    flex-direction: column;
+    margin: 3.5rem 0;
+
+    @media (min-width: '600px') {
+      flex-direction: row;
+    }
+  }
+
+  &-block-column {
+    margin-bottom: 2rem;
+
+    @media (min-width: '600px') {
+      padding: 0 2.5rem;
+      margin-bottom: 0;
+    }
+
   }
 
   &-block-embed {
