--- a/src/styles/components/_background-bubbles.scss
+++ b/src/styles/components/_background-bubbles.scss
@@ -1,9 +1,9 @@
 .background-bubbles {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 105%;
   padding: 0;
   margin: 0;
   z-index: -1;
