--- a/src/styles/components/_home-header.scss
+++ b/src/styles/components/_home-header.scss
@@ -1,11 +1,9 @@
 .home-header {
-  position: absolute;
-  top: 5rem;
-  left: 1rem;
-
-  @media (min-width: '1200px') {
-    left: calc(50% - 56rem);
+  @media (min-width: '1000px') {
+    margin-top: 5rem;
   }
+  
+  text-align: center;
 
   &__name {
     color: $colorPrimary;
@@ -32,13 +30,15 @@
     }
 
     @media (min-width: '768px') {
-      margin-top: -3rem;
+      margin-top: -1rem;
     }
   }
 
   &__social {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
+    margin-top: 2rem;
 
     a {
       display: flex;
@@ -46,7 +46,7 @@
       text-decoration: none;
       color: $colorText;
       font-size: 1.8rem;
-      margin-right: 2.5rem;
+      margin: 0 1.25rem;
       transition: color 0.2s ease;
       will-change: color;
       animation: fadeInLeft 1.5s ease 1.5s alternate forwards;
@@ -57,10 +57,10 @@
       }
 
       &:hover {
-        color: $colorPrimary;
+        color: rgba($color: $colorText, $alpha: 0.75);
 
         .icon {
-          color: $colorPrimary;
+          color: rgba($color: $colorText, $alpha: 0.75);
         }
       }
     }
@@ -80,7 +80,7 @@
   &__separator {
     position: relative;
     width: 0;
-    margin: 3rem 0;
+    margin: 9rem 0 0;
     border-bottom: 0.15rem solid $colorPrimary;
     animation: borderExpand 0.25s ease 2s alternate forwards;
 
@@ -95,24 +95,6 @@
       height: 0.15rem;
       border-bottom: 0.15rem solid $colorSecondary;
       animation: halfBorderExpand 0.25s ease 2.5s alternate forwards;
-    }
-  }
-
-  &__icons {
-    .icon {
-      font-size: 4.5em;
-      animation: fadeInLeft 1.5s ease alternate forwards;
-      opacity: 0;
-
-      @for $i from 0 through 5 {
-        &.icon-#{$i} {
-          animation-delay: ($i * (0.2s) + 2);
-        }
-      }
-
-      @media (min-width: '768px') {
-        font-size: 7em;
-      }
     }
   }
 }
