--- a/src/styles/components/_navigation.scss
+++ b/src/styles/components/_navigation.scss
@@ -115,7 +115,7 @@
       }
 
       svg {
-        color: $colorText;
+        color: $colorPrimary;
       }
     }
 
@@ -129,7 +129,7 @@
       }
   
       svg {
-        color: $colorText;
+        color: $colorPrimary;
       }
     }
   }
